# LOS

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANUAL.md  README.md  SECURITY.md  check_viabilidade.py  conftest.py  index.html  los_grammar.lark  los_parser.py  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.py  test_supply_chain_e2e.py  teste_exemplos_los.py
.github/: SETUP-GUIDE.md  copilot-instructions.md
backlog/: index.html
backup/: parser_los_avancado_backup.py  parser_los_original_backup.py
bases_exemplos/: capacidade_fabrica.csv  clientes_scm.csv  custo_transporte.csv  demanda.csv  estoque_exemplo.csv  plantas.csv  produtos_exemplo.csv  produtos_scm.csv
changelog/: index.html
contributing/: index.html
docs/: arquitetura-modular-los.md  backlog.md  changelog.md  documentacao-gramatica-los.md  documentacao-parser-los.md  index.md  manual.md  relatorio-conclusao-testes.md  relatorio-los.md  security.md
exemplos_los/: 00_guia_sintaxe.los  01_objetivos.los  02_restricoes.los  03_operacoes_matematicas.los  04_condicionais.los  05_agregacoes_loops.los  06_datasets_variaveis.los  07_operadores_relacionais.los  08_exemplos_complexos.los  09_exemplos_validados.los  10_limitacoes_conhecidas.los  11_teste_correcoes.los  12_teste_correcoes_finais.los  13_limitacoes_TODAS_CORRIGIDAS.los  README.md
exemplos_los_reais/: 01_minimizar_custos_producao.los  02_maximizar_lucro.los  03_alocacao_com_penalidades.los  04_planejamento_multi_periodo.los  05_otimizacao_condicional.los  06_transporte_distribuicao.los  README.md
los/: README.md  __init__.py  los_grammar.lark
manual/: index.html
modelos/: supply_chain_network.los
search/: search_index.json
security/: index.html
temp-archive/: 20250630-224500-transformacao-lib-profissional-los.md  20250703-142604-analise-completa-lib-los.md
temp-todo/: 20250630-143000-parser-los-unificado.md  20250630-172300-consolidacao-parser-los.md  20250630-190000-correcao-limitacoes-los.md
tests/: README.md  __init__.py  conftest.py  executar_testes.py  test_architecture_validation.py  test_audit_remediation.py  test_expression_v3.py  test_grammar_v3.py  test_integration_architecture.py  test_integration_v3.py  test_los_dados_reais.py  test_los_funcional.py  test_public_api.py  test_service_v3.py  test_unit_modules.py  test_unit_modules_fixed.py  (+2 more)
(+92 files in other folders)
