[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "los-lang"
version = "3.3.2"
description = "Write Math, Run Python. A Domain-Specific Language for Mathematical Optimization."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Jonathan Pereira"},
]
keywords = [
    "optimization",
    "mathematical-optimization",
    "operations-research",
    "modeling-language",
    "pulp",
    "solver",
    "milp",
    "linear-programming",
    "mixed-integer-programming",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "lark>=1.1.5",
    "pandas>=1.5.0",
    "PuLP>=2.7.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
cli = [
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/jowpereira/los"
Documentation = "https://github.com/jowpereira/los/blob/master/MANUAL.md"
Repository = "https://github.com/jowpereira/los"
Issues = "https://github.com/jowpereira/los/issues"
Changelog = "https://github.com/jowpereira/los/blob/master/CHANGELOG.md"

[project.scripts]
los = "los.adapters.cli.los_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["los"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
